# database_mcp

./: .env.example  .gitignore  .jscpd.json  Makefile  README.md  pyproject.toml
.codacy/: cli.sh  codacy.yaml
src/mysql_mcp/: __init__.py  __main__.py  config.py  connection.py  query_safety.py  server.py
tests/: __init__.py  test_query_safety.py
tests/mysql_mcp/: __init__.py  test_config.py  test_connection.py  test_query_safety.py  test_server.py
