[project]
name = "mysql-mcp"
version = "0.1.0"
description = "MCP server for MySQL using FastMCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "aiomysql>=0.2.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=7.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["ALL"]
ignore = ["D"]
